(finally) fixed method signature issues.